testsuite/tests/tool-ocaml-no-implicit-interface/failure.compilers.reference
File "failure.ml", line 1:
Error: Cannot find interface file and implicit interface generation has been turned off (-no-implicit-interface)
